# ehr-embeddings

./: .gitignore  README.md  __main__.py  bert_config.toml  config.toml  pyproject.toml  requirements.txt  requirements_dev.txt
src/ehrembedding/: dataset.py  model.py  preprocess.py
src/ehrembeddings/: __main__.py  bert.py  bertconfig.py  config.py  custombert.py  dataset.py  finetunebert.py  loss.py  model.py  preprocess.py  trainer.py  utils.py
src/glove/: data_utils.py  glove.py  model.py  readme.md
src/shuffling/: data_gen.py  readme.md  scratch.ipynb
